[package]
name = "biiwadi"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
wayland-client = "0.31.11"
wayland-protocols = {version="0.32.9", features = ["client", "unstable"]}
zbus = "5.12.0"
